# hocGui

./: CMakeLists.txt  GPT.txt  main.cpp
